# memo

./: 05_test_libreSwan.7z  20220424.txt  20220628.txt  20220906.txt  20230702_設定シーケンス.txt  20230710.txt  211201.txt  220416_chk.txt  2305010.txt  Linux起動メモ.txt  comPF_cert.txt  ipsec証明書.7z  keybindings.json  parse_c_array_to_csv.py  read_list.sh  regrep_c_struct.py  setting.json  sock_test_230605.tgz  ut_skelton.7z  vba_sjis2hex.txt  vim_keymap.txt  テキストテンプレート_220317.xlsm  図表文字数カウント_240811a.7z
sock_test/: CMakeLists.txt  get_ifinfo.c  sock_ext.h  sock_tcp.c  sock_test.c  sock_test.h  sock_udp.c
